fixed extra space

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -7,13 +7,13 @@ background-size:cover;
 width: 100%;
 background-color: transparent;
 text-align:center; 
-height: 95vh;
+height: 100vh;
 min-height: 500px;
 }
 .textblock {
   /* margin: 10% 10%;
   padding-bottom: 10%; */
-  margin-top: 5%;
+  /* margin-top: 5%; */
 
   background-color: transparent;
 }
@@ -24,23 +24,7 @@ min-height: 500px;
   background: none;
   background-color: transparent;
 }
-.text1 {
-  margin-top: 10%;
-  color: #ff4c29;
-  font-size: em;
-  background-color: transparent;
-}
-.text2 {
-  font-family: "Montserrat";
-  /* text-align: center; */
-  color: #fff;
-  /* display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center; */
-  letter-spacing: 1px;
-  background-color: transparent;
-}
+
 .homeContent p{
   background-color: transparent;
 }
@@ -58,9 +42,27 @@ min-height: 500px;
   margin: 10px 0;
   background-color: transparent;
 }
+.text1 {
+  margin-top: 15%;
+  color: #ff4c29;
+  font-size: 2rem;
+  background-color: transparent;
+}
+.text2 {
+  font-family: "Montserrat";
+  /* text-align: center; */
+  color: #fff;
+  /* display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; */
+  letter-spacing: 1px;
+  background-color: transparent;
+}
 .text3 {
   color: #2c394b;
   background-color: transparent;
+  font-size: 3rem;
 }
 .text4 {
   background-color: transparent;
